--- a/StudentPortal/Views/Roles/Index.cshtml
+++ b/StudentPortal/Views/Roles/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<GardenApp.Model.RolesView>
+﻿@model IEnumerable<StudentPortal.Model.RolesView>
 
 @{
     ViewBag.Title = "Role";
