--- a/StudentPortal/Views/Roles/UsersInRole.cshtml
+++ b/StudentPortal/Views/Roles/UsersInRole.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<GardenApp.Model.ViewModels.UsersView>
+﻿@model IEnumerable<StudentPortal.Model.ViewModels.UsersView>
 
 @{
     ViewBag.Title = "Roles";
